PROJECT(NEAT_cpp)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_CXX_FLAGS "-O0")
SET(CMAKE_C_FLAGS "-O0")
ADD_SUBDIRECTORY(googletest)
ADD_SUBDIRECTORY(NEATCore)
ADD_SUBDIRECTORY(XorEvaluator)
CONFIGURE_FILE(config.ini ${neat_core_BINARY_DIR} COPYONLY)
CONFIGURE_FILE(dot_to_png.sh ${neat_core_BINARY_DIR} COPYONLY)

FILE(GLOB DOT_FILES ${neat_core_BINARY_DIR}/*.dot)

IF(DOT_FILES)
    FILE(REMOVE ${DOT_FILES})
ENDIF(DOT_FILES)
