CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(neat_core) 

ADD_DEFINITIONS(-std=c++14 -Wall -Werror)

FILE(GLOB HEADERS
   "Inc/*.hpp"
)

FILE(GLOB SOURCES
    "Src/*.cpp"
)

SET( NEATCore_sources ${CMAKE_CURRENT_SOURCE_DIR}/Src )
SET( NEATCore_headers ${CMAKE_CURRENT_SOURCE_DIR}/Inc PARENT_SCOPE)

INCLUDE_DIRECTORIES( Inc )

ADD_SUBDIRECTORY(UnitTests)

ADD_EXECUTABLE(${PROJECT_NAME} ${HEADERS} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} xor_eval)

